--- a/index.html
+++ b/index.html
@@ -3,86 +3,202 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <title>Nibanez — Technical Artist & Systems Engineer</title>
 
 <style>
+
+:root {
+    --bg: #0b0b0c;
+    --panel: #121214;
+    --text: #e8e8ea;
+    --secondary: #9a9aa3;
+    --accent: #4da3ff;
+    --border: #1f1f23;
+}
+
 body {
     margin: 0;
-    font-family: Arial, sans-serif;
-    background: #0a0a0a;
-    color: #e0e0e0;
+    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, sans-serif;
+    background: var(--bg);
+    color: var(--text);
 }
 
 .container {
-    max-width: 900px;
+    max-width: 1000px;
     margin: auto;
-    padding: 60px 20px;
+    padding: 40px 20px;
 }
 
-h1 {
-    font-size: 48px;
-    margin-bottom: 10px;
+nav {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 60px;
 }
 
-h2 {
-    margin-top: 40px;
-    border-bottom: 1px solid #333;
-    padding-bottom: 5px;
+.nav-links a {
+    margin-left: 20px;
+    color: var(--secondary);
 }
 
-p {
-    line-height: 1.6;
+.nav-links a:hover {
+    color: var(--accent);
 }
 
-a {
-    color: #4da3ff;
-    text-decoration: none;
+.hero {
+    margin-bottom: 80px;
 }
 
-.project {
-    margin-top: 20px;
+.hero h1 {
+    font-size: 52px;
+    margin: 0;
+}
+
+.hero p {
+    font-size: 20px;
+    color: var(--secondary);
+    max-width: 600px;
+}
+
+.section {
+    margin-bottom: 60px;
+}
+
+.section h2 {
+    border-bottom: 1px solid var(--border);
+    padding-bottom: 10px;
+    margin-bottom: 20px;
+}
+
+.card {
+    background: var(--panel);
+    padding: 20px;
+    margin-bottom: 15px;
+    border-radius: 8px;
+    border: 1px solid var(--border);
+}
+
+.card-title {
+    font-size: 18px;
+    margin-bottom: 5px;
+}
+
+.card-desc {
+    color: var(--secondary);
 }
 
 .footer {
-    margin-top: 60px;
+    margin-top: 80px;
+    color: var(--secondary);
     font-size: 14px;
-    color: #666;
 }
+
+a {
+    color: var(--accent);
+    text-decoration: none;
+}
+
 </style>
 
 </head>
+
 <body>
 
 <div class="container">
 
-<h1>Nibanez</h1>
-<p>
-Technical Artist and Systems Engineer building tools, simulations, and interactive experiences.
-</p>
+<nav>
+<div><strong>Nibanez</strong></div>
+<div class="nav-links">
+<a href="#projects">Projects</a>
+<a href="#engineering">Engineering</a>
+<a href="#technical-art">Technical Art</a>
+<a href="#contact">Contact</a>
+</div>
+</nav>
 
+<div class="hero">
+<h1>Technical Artist & Systems Engineer</h1>
+<p>
+I build tools, pipelines, and interactive systems bridging engineering and art.
+Focused on game technology, backend systems, and technical workflows.
+</p>
+</div>
+
+<div id="projects" class="section">
 <h2>Projects</h2>
 
-<div class="project">
-<b>CommitMood</b><br>
-Backend API built in ASP.NET for emotional classification workflows.
+<div class="card">
+<div class="card-title">CommitMood</div>
+<div class="card-desc">
+ASP.NET backend API for classification and workflow automation.
+</div>
 </div>
 
-<div class="project">
-<b>Unity & Technical Art Tools</b><br>
-Custom tooling, shaders, and pipelines for interactive environments.
+<div class="card">
+<div class="card-title">Unity Systems & Tooling</div>
+<div class="card-desc">
+Custom tools, runtime systems, and technical pipelines for game development.
+</div>
 </div>
 
-<div class="project">
-<b>Indie Game Development</b><br>
-Gameplay systems, architecture, and technical pipelines.
+<div class="card">
+<div class="card-title">Indie Game Development</div>
+<div class="card-desc">
+Gameplay architecture, simulation systems, and production pipelines.
+</div>
 </div>
 
-<h2>Links</h2>
+</div>
 
-<p>
+<div id="engineering" class="section">
+<h2>Engineering</h2>
+
+<div class="card">
+<div class="card-title">Backend Systems</div>
+<div class="card-desc">
+ASP.NET, API architecture, structured systems design.
+</div>
+</div>
+
+<div class="card">
+<div class="card-title">Game Engine Development</div>
+<div class="card-desc">
+Unity, Godot, gameplay systems, and runtime architecture.
+</div>
+</div>
+
+</div>
+
+<div id="technical-art" class="section">
+<h2>Technical Art</h2>
+
+<div class="card">
+<div class="card-title">Tool Development</div>
+<div class="card-desc">
+Pipeline tools, asset workflows, and production tooling.
+</div>
+</div>
+
+<div class="card">
+<div class="card-title">3D & Technical Workflows</div>
+<div class="card-desc">
+Maya, ZBrush, procedural workflows, and integration pipelines.
+</div>
+</div>
+
+</div>
+
+<div id="contact" class="section">
+<h2>Contact</h2>
+
+<div class="card">
+<div class="card-desc">
 GitHub: <a href="https://github.com/nibanezdev">github.com/nibanezdev</a><br>
 Domain: nibanez.com
-</p>
+</div>
+</div>
+
+</div>
 
 <div class="footer">
 © 2026 Nibanez
