--- a/index.html
+++ b/index.html
@@ -6,99 +6,7 @@
 
 <title>Nibanez — Technical Artist & Systems Engineer</title>
 
-<style>
-
-:root {
-    --bg: #0b0b0c;
-    --panel: #121214;
-    --text: #e8e8ea;
-    --secondary: #9a9aa3;
-    --accent: #4da3ff;
-    --border: #1f1f23;
-}
-
-body {
-    margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, sans-serif;
-    background: var(--bg);
-    color: var(--text);
-}
-
-.container {
-    max-width: 1000px;
-    margin: auto;
-    padding: 40px 20px;
-}
-
-nav {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 60px;
-}
-
-.nav-links a {
-    margin-left: 20px;
-    color: var(--secondary);
-}
-
-.nav-links a:hover {
-    color: var(--accent);
-}
-
-.hero {
-    margin-bottom: 80px;
-}
-
-.hero h1 {
-    font-size: 52px;
-    margin: 0;
-}
-
-.hero p {
-    font-size: 20px;
-    color: var(--secondary);
-    max-width: 600px;
-}
-
-.section {
-    margin-bottom: 60px;
-}
-
-.section h2 {
-    border-bottom: 1px solid var(--border);
-    padding-bottom: 10px;
-    margin-bottom: 20px;
-}
-
-.card {
-    background: var(--panel);
-    padding: 20px;
-    margin-bottom: 15px;
-    border-radius: 8px;
-    border: 1px solid var(--border);
-}
-
-.card-title {
-    font-size: 18px;
-    margin-bottom: 5px;
-}
-
-.card-desc {
-    color: var(--secondary);
-}
-
-.footer {
-    margin-top: 80px;
-    color: var(--secondary);
-    font-size: 14px;
-}
-
-a {
-    color: var(--accent);
-    text-decoration: none;
-}
-
-</style>
+<link rel="stylesheet" href="/assets/style.css">
 
 </head>
 
@@ -107,101 +15,88 @@ a {
 <div class="container">
 
 <nav>
-<div><strong>Nibanez</strong></div>
-<div class="nav-links">
-<a href="#projects">Projects</a>
-<a href="#engineering">Engineering</a>
-<a href="#technical-art">Technical Art</a>
-<a href="#contact">Contact</a>
-</div>
+  <div><strong>Nibanez</strong></div>
+  <div class="nav-links">
+    <a href="/">Home</a>
+    <a href="/projects/">Projects</a>
+    <a href="#engineering">Engineering</a>
+    <a href="#technical-art">Technical Art</a>
+    <a href="#contact">Contact</a>
+  </div>
 </nav>
 
 <div class="hero">
-<h1>Technical Artist & Systems Engineer</h1>
-<p>
-I build tools, pipelines, and interactive systems bridging engineering and art.
-Focused on game technology, backend systems, and technical workflows.
-</p>
-</div>
+  <h1>Technical Artist & Systems Engineer</h1>
 
-<div id="projects" class="section">
-<h2>Projects</h2>
+  <p>
+    I build tools, pipelines, and interactive systems bridging engineering and art.
+    Focused on backend systems, game technology, and production workflows.
+  </p>
 
-<div class="card">
-<div class="card-title">CommitMood</div>
-<div class="card-desc">
-ASP.NET backend API for classification and workflow automation.
-</div>
-</div>
-
-<div class="card">
-<div class="card-title">Unity Systems & Tooling</div>
-<div class="card-desc">
-Custom tools, runtime systems, and technical pipelines for game development.
-</div>
-</div>
-
-<div class="card">
-<div class="card-title">Indie Game Development</div>
-<div class="card-desc">
-Gameplay architecture, simulation systems, and production pipelines.
-</div>
-</div>
+  <div class="actions">
+    <a class="btn" href="/projects/">View Projects</a>
+    <a class="btn" href="https://github.com/nibanezdev">GitHub</a>
+  </div>
 
 </div>
+
 
 <div id="engineering" class="section">
-<h2>Engineering</h2>
+  <h2>Engineering</h2>
 
-<div class="card">
-<div class="card-title">Backend Systems</div>
-<div class="card-desc">
-ASP.NET, API architecture, structured systems design.
-</div>
+  <div class="card">
+    <div class="card-title">Backend Systems</div>
+    <div class="meta">
+      ASP.NET APIs, structured architecture, DTO design, and scalable service structure.
+    </div>
+  </div>
+
+  <div class="card">
+    <div class="card-title">Game Engine Systems</div>
+    <div class="meta">
+      Unity and Godot runtime architecture, gameplay systems, and tool integration.
+    </div>
+  </div>
+
 </div>
 
-<div class="card">
-<div class="card-title">Game Engine Development</div>
-<div class="card-desc">
-Unity, Godot, gameplay systems, and runtime architecture.
-</div>
-</div>
-
-</div>
 
 <div id="technical-art" class="section">
-<h2>Technical Art</h2>
+  <h2>Technical Art</h2>
 
-<div class="card">
-<div class="card-title">Tool Development</div>
-<div class="card-desc">
-Pipeline tools, asset workflows, and production tooling.
-</div>
+  <div class="card">
+    <div class="card-title">Pipeline Tool Development</div>
+    <div class="meta">
+      Asset workflows, Maya ↔ ZBrush pipelines, and production tooling.
+    </div>
+  </div>
+
+  <div class="card">
+    <div class="card-title">3D and Technical Workflows</div>
+    <div class="meta">
+      Maya, ZBrush, procedural pipelines, retopology workflows, and engine integration.
+    </div>
+  </div>
+
 </div>
 
-<div class="card">
-<div class="card-title">3D & Technical Workflows</div>
-<div class="card-desc">
-Maya, ZBrush, procedural workflows, and integration pipelines.
-</div>
-</div>
-
-</div>
 
 <div id="contact" class="section">
-<h2>Contact</h2>
+  <h2>Contact</h2>
 
-<div class="card">
-<div class="card-desc">
-GitHub: <a href="https://github.com/nibanezdev">github.com/nibanezdev</a><br>
-Domain: nibanez.com
-</div>
-</div>
+  <div class="card">
+    <div class="meta">
+      GitHub: <a href="https://github.com/nibanezdev">github.com/nibanezdev</a><br>
+      Projects: <a href="/projects/">nibanez.com/projects</a><br>
+      Domain: nibanez.com
+    </div>
+  </div>
 
 </div>
+
 
 <div class="footer">
-© 2026 Nibanez
+  © 2026 Nibanez
 </div>
 
 </div>
