--- a/index.html
+++ b/index.html
@@ -1,105 +1,491 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Nikolai Ibanez</title>
+  <meta name="description" content="Technical Artist & Tools Engineer building Unity/C# tools, pipelines, and interactive systems." />
+  <style>
+    :root {
+      --bg: #0b0f1a;
+      --panel: #0f1629;
+      --text: #e7ecff;
+      --muted: #b6c0e6;
+      --border: rgba(255,255,255,0.08);
+      --accent: #6ea8ff;
+      --accent2: #7ee0c7;
+      --shadow: 0 10px 30px rgba(0,0,0,0.35);
+      --radius: 16px;
+      --radius-sm: 12px;
+      --max: 1080px;
+    }
 
-<title>Nibanez — Technical Artist & Systems Engineer</title>
+    * { box-sizing: border-box; }
+    body {
+      margin: 0;
+      font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji","Segoe UI Emoji";
+      background: radial-gradient(1200px 800px at 10% 0%, rgba(110,168,255,0.18), transparent 55%),
+                  radial-gradient(1200px 800px at 90% 10%, rgba(126,224,199,0.12), transparent 55%),
+                  var(--bg);
+      color: var(--text);
+      line-height: 1.5;
+    }
 
-<link rel="stylesheet" href="/assets/style.css">
+    a { color: inherit; text-decoration: none; }
+    a:hover { opacity: 0.92; }
 
+    .container {
+      width: 100%;
+      max-width: var(--max);
+      margin: 0 auto;
+      padding: 0 20px;
+    }
+
+    /* Nav */
+    .nav {
+      position: sticky;
+      top: 0;
+      z-index: 50;
+      background: rgba(11,15,26,0.75);
+      backdrop-filter: blur(10px);
+      border-bottom: 1px solid var(--border);
+    }
+    .nav-inner {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 14px 0;
+      gap: 12px;
+    }
+    .brand {
+      font-weight: 700;
+      letter-spacing: 0.2px;
+    }
+    .nav-links {
+      display: flex;
+      gap: 14px;
+      flex-wrap: wrap;
+      justify-content: flex-end;
+      align-items: center;
+    }
+    .nav-links a {
+      font-size: 14px;
+      color: var(--muted);
+      padding: 8px 10px;
+      border-radius: 10px;
+      border: 1px solid transparent;
+    }
+    .nav-links a:hover {
+      color: var(--text);
+      border-color: var(--border);
+      background: rgba(255,255,255,0.03);
+    }
+
+    /* Hero */
+    .hero {
+      padding: 56px 0 28px;
+    }
+    .hero-grid {
+      display: grid;
+      grid-template-columns: 1.3fr 0.7fr;
+      gap: 18px;
+      align-items: stretch;
+    }
+    @media (max-width: 860px) {
+      .hero-grid { grid-template-columns: 1fr; }
+    }
+    .hero-card {
+      background: rgba(255,255,255,0.03);
+      border: 1px solid var(--border);
+      border-radius: var(--radius);
+      box-shadow: var(--shadow);
+      padding: 28px;
+    }
+    .kicker {
+      display: inline-flex;
+      gap: 10px;
+      align-items: center;
+      font-size: 13px;
+      color: var(--muted);
+      border: 1px solid var(--border);
+      padding: 8px 12px;
+      border-radius: 999px;
+      background: rgba(255,255,255,0.02);
+      margin-bottom: 14px;
+    }
+    .kicker .dot {
+      width: 8px; height: 8px; border-radius: 99px;
+      background: linear-gradient(90deg, var(--accent), var(--accent2));
+      box-shadow: 0 0 0 4px rgba(110,168,255,0.12);
+    }
+    h1 {
+      margin: 0 0 10px;
+      font-size: 38px;
+      line-height: 1.15;
+      letter-spacing: -0.6px;
+    }
+    @media (max-width: 520px) {
+      h1 { font-size: 32px; }
+    }
+    .subtitle {
+      margin: 0 0 18px;
+      color: var(--muted);
+      font-size: 16px;
+      max-width: 70ch;
+    }
+    .roles {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 8px;
+      margin: 0 0 18px;
+    }
+    .pill {
+      font-size: 13px;
+      color: rgba(231,236,255,0.92);
+      border: 1px solid var(--border);
+      background: rgba(255,255,255,0.02);
+      padding: 6px 10px;
+      border-radius: 999px;
+    }
+
+    .cta-row {
+      display: flex;
+      gap: 10px;
+      flex-wrap: wrap;
+      margin-top: 6px;
+    }
+    .btn {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      gap: 10px;
+      padding: 10px 14px;
+      border-radius: 12px;
+      border: 1px solid var(--border);
+      background: rgba(255,255,255,0.03);
+      color: var(--text);
+      font-weight: 600;
+      font-size: 14px;
+      cursor: pointer;
+    }
+    .btn:hover { background: rgba(255,255,255,0.06); }
+    .btn-primary {
+      background: linear-gradient(90deg, rgba(110,168,255,0.22), rgba(126,224,199,0.14));
+      border-color: rgba(110,168,255,0.25);
+    }
+    .btn-primary:hover {
+      background: linear-gradient(90deg, rgba(110,168,255,0.28), rgba(126,224,199,0.18));
+    }
+
+    /* Side card */
+    .mini {
+      display: grid;
+      gap: 12px;
+    }
+    .mini .block {
+      background: rgba(255,255,255,0.03);
+      border: 1px solid var(--border);
+      border-radius: var(--radius);
+      padding: 18px;
+    }
+    .mini .label {
+      font-size: 12px;
+      color: var(--muted);
+      margin-bottom: 6px;
+    }
+    .mini .value {
+      font-weight: 700;
+      font-size: 14px;
+    }
+    .mini .value a {
+      color: var(--text);
+      border-bottom: 1px solid rgba(231,236,255,0.2);
+    }
+
+    /* Sections */
+    section {
+      padding: 22px 0;
+    }
+    .section-title {
+      font-size: 18px;
+      margin: 0 0 12px;
+      letter-spacing: -0.2px;
+    }
+    .grid-3 {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 14px;
+    }
+    @media (max-width: 900px) { .grid-3 { grid-template-columns: 1fr; } }
+
+    .card {
+      background: rgba(255,255,255,0.03);
+      border: 1px solid var(--border);
+      border-radius: var(--radius);
+      padding: 18px;
+      box-shadow: var(--shadow);
+    }
+    .card h3 {
+      margin: 0 0 6px;
+      font-size: 15px;
+      letter-spacing: -0.1px;
+    }
+    .card p {
+      margin: 0 0 12px;
+      color: var(--muted);
+      font-size: 14px;
+    }
+    .meta {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 8px;
+    }
+    .tag {
+      font-size: 12px;
+      color: rgba(231,236,255,0.9);
+      border: 1px solid var(--border);
+      padding: 5px 8px;
+      border-radius: 999px;
+      background: rgba(255,255,255,0.02);
+    }
+    .badge {
+      font-size: 12px;
+      padding: 5px 8px;
+      border-radius: 999px;
+      border: 1px solid rgba(231,236,255,0.14);
+      color: rgba(231,236,255,0.85);
+      background: rgba(231,236,255,0.04);
+    }
+
+    .row {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 14px;
+    }
+    @media (max-width: 900px) { .row { grid-template-columns: 1fr; } }
+
+    ul {
+      margin: 10px 0 0;
+      padding-left: 18px;
+      color: var(--muted);
+      font-size: 14px;
+    }
+    li { margin: 6px 0; }
+
+    footer {
+      padding: 26px 0 36px;
+      color: rgba(182,192,230,0.8);
+      border-top: 1px solid var(--border);
+      margin-top: 30px;
+      font-size: 13px;
+    }
+    .footer-inner {
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      gap: 10px;
+      align-items: center;
+    }
+    .sep { opacity: 0.6; }
+  </style>
 </head>
 
 <body>
-
-<div class="container">
-
-<nav>
-  <div><strong>Nibanez</strong></div>
-  <div class="nav-links">
-    <a href="/">Home</a>
-    <a href="/projects/">Projects</a>
-    <a href="#engineering">Engineering</a>
-    <a href="#technical-art">Technical Art</a>
-    <a href="#contact">Contact</a>
-  </div>
-</nav>
-
-<div class="hero">
-  <h1>Technical Artist & Systems Engineer</h1>
-
-  <p>
-    I build tools, pipelines, and interactive systems bridging engineering and art.
-    Focused on backend systems, game technology, and production workflows.
-  </p>
-
-  <div class="actions">
-    <a class="btn" href="/projects/">View Projects</a>
-    <a class="btn" href="https://github.com/nibanezdev">GitHub</a>
-  </div>
-
-</div>
-
-
-<div id="engineering" class="section">
-  <h2>Engineering</h2>
-
-  <div class="card">
-    <div class="card-title">Backend Systems</div>
-    <div class="meta">
-      ASP.NET APIs, structured architecture, DTO design, and scalable service structure.
+  <!-- NAV -->
+  <div class="nav">
+    <div class="container">
+      <div class="nav-inner">
+        <div class="brand">Nikolai Ibanez</div>
+        <div class="nav-links">
+          <a href="#featured">Featured</a>
+          <a href="#tools">Tools</a>
+          <a href="#tech-art">Technical Art</a>
+          <a href="/projects.html">Projects</a>
+          <a href="#contact">Contact</a>
+        </div>
+      </div>
     </div>
   </div>
 
-  <div class="card">
-    <div class="card-title">Game Engine Systems</div>
-    <div class="meta">
-      Unity and Godot runtime architecture, gameplay systems, and tool integration.
+  <!-- HERO -->
+  <header class="hero">
+    <div class="container">
+      <div class="hero-grid">
+        <div class="hero-card">
+          <div class="kicker"><span class="dot"></span><span>Tools + pipelines + interactive systems</span></div>
+
+          <h1>Technical Artist & Tools Engineer</h1>
+
+          <p class="subtitle">
+            I build tooling, pipelines, and interactive systems across Unity, C#, and DCC workflows.
+            Focused on production speed, clarity, and maintainable architecture.
+          </p>
+
+          <div class="roles">
+            <span class="pill">Tools Developer</span>
+            <span class="pill">Technical Artist</span>
+            <span class="pill">Creative Technologist</span>
+            <span class="pill">Unity / C# Systems</span>
+          </div>
+
+          <div class="cta-row">
+            <a class="btn btn-primary" href="/projects.html">View Projects</a>
+            <a class="btn" href="#tools">Tools</a>
+            <!-- Replace with your resume URL when ready -->
+            <a class="btn" href="#contact">Resume</a>
+          </div>
+        </div>
+
+        <div class="mini">
+          <div class="block">
+            <div class="label">Primary stack</div>
+            <div class="value">Unity · C# · Git · DCC Pipelines</div>
+          </div>
+          <div class="block">
+            <div class="label">Focus</div>
+            <div class="value">Editor tools, automation, pipeline clarity</div>
+          </div>
+          <div class="block">
+            <div class="label">Links</div>
+            <div class="value">
+              <a href="https://github.com/nibanezdev" target="_blank" rel="noreferrer">GitHub</a>
+              <span class="sep">·</span>
+              <a href="/projects.html">Projects</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-  </div>
+  </header>
 
-</div>
+  <!-- FEATURED -->
+  <section id="featured">
+    <div class="container">
+      <h2 class="section-title">Featured Work</h2>
 
+      <div class="grid-3">
+        <a class="card" href="/projects/commitmood.html">
+          <h3>CommitMood</h3>
+          <p>Developer workflow tool built in C# to track momentum and reduce friction in daily work.</p>
+          <div class="meta">
+            <span class="tag">C#</span>
+            <span class="tag">Productivity</span>
+            <span class="tag">Systems</span>
+          </div>
+        </a>
 
-<div id="technical-art" class="section">
-  <h2>Technical Art</h2>
+        <div class="card">
+          <h3>Unity Tooling</h3>
+          <p>Editor utilities and system tooling. Project page will be added soon.</p>
+          <div class="meta">
+            <span class="badge">Coming soon</span>
+            <span class="tag">Unity</span>
+            <span class="tag">Editor Tools</span>
+            <span class="tag">C#</span>
+          </div>
+        </div>
 
-  <div class="card">
-    <div class="card-title">Pipeline Tool Development</div>
-    <div class="meta">
-      Asset workflows, Maya ↔ ZBrush pipelines, and production tooling.
+        <div class="card">
+          <h3>Maya ↔ ZBrush Pipeline</h3>
+          <p>Asset workflow automation for iteration, retopo loops, and clean handoffs between DCC tools.</p>
+          <div class="meta">
+            <span class="badge">Coming soon</span>
+            <span class="tag">Pipeline</span>
+            <span class="tag">DCC</span>
+            <span class="tag">Automation</span>
+          </div>
+        </div>
+      </div>
     </div>
-  </div>
+  </section>
 
-  <div class="card">
-    <div class="card-title">3D and Technical Workflows</div>
-    <div class="meta">
-      Maya, ZBrush, procedural pipelines, retopology workflows, and engine integration.
+  <!-- MAIN SECTIONS -->
+  <section id="tools">
+    <div class="container">
+      <h2 class="section-title">Tools / Engineering</h2>
+
+      <div class="row">
+        <div class="card">
+          <h3>What I build</h3>
+          <ul>
+            <li>Unity editor tooling, inspectors, and workflow accelerators.</li>
+            <li>Automation scripts that reduce manual steps in asset and content pipelines.</li>
+            <li>Maintainable systems with clear boundaries and documentation.</li>
+          </ul>
+        </div>
+
+        <div class="card">
+          <h3>How I work</h3>
+          <ul>
+            <li>Start with the workflow pain point, then design the smallest tool that removes it.</li>
+            <li>Prefer clarity over cleverness; optimize for adoption and maintainability.</li>
+            <li>Ship usable increments; iterate based on real use.</li>
+          </ul>
+        </div>
+      </div>
     </div>
-  </div>
+  </section>
 
-</div>
+  <section id="tech-art">
+    <div class="container">
+      <h2 class="section-title">Technical Art / 3D</h2>
 
+      <div class="row">
+        <div class="card">
+          <h3>Capabilities</h3>
+          <ul>
+            <li>Sculpting, retopology workflows, and clean asset prep for real-time engines.</li>
+            <li>Rigging and animation fundamentals (pipeline-aware).</li>
+            <li>Practical focus: assets that integrate cleanly and perform well.</li>
+          </ul>
+        </div>
 
-<div id="contact" class="section">
-  <h2>Contact</h2>
-
-  <div class="card">
-    <div class="meta">
-      GitHub: <a href="https://github.com/nibanezdev">github.com/nibanezdev</a><br>
-      Projects: <a href="/projects/">nibanez.com/projects</a><br>
-      Domain: nibanez.com
+        <div class="card">
+          <h3>Why it matters</h3>
+          <ul>
+            <li>Tools that “fit” artists require understanding the real production constraints.</li>
+            <li>Technical art provides the bridge between creative output and engineering systems.</li>
+            <li>Better pipelines = faster iteration + fewer broken handoffs.</li>
+          </ul>
+        </div>
+      </div>
     </div>
-  </div>
+  </section>
 
-</div>
+  <!-- CONTACT -->
+  <section id="contact">
+    <div class="container">
+      <h2 class="section-title">Contact</h2>
 
+      <div class="card">
+        <p style="margin:0; color: var(--muted);">
+          Add your email + LinkedIn here. Also replace the GitHub link above with your actual profile URL.
+        </p>
+        <div class="cta-row" style="margin-top:12px;">
+          <!-- Replace placeholders -->
+          <a class="btn" href="nikolai.ibanez@gmail.com">Email</a>
+          <a class="btn" href="https://www.linkedin.com/" target="_blank" rel="noreferrer">LinkedIn</a>
+          <a class="btn" href="https://github.com/" target="_blank" rel="noreferrer">GitHub</a>
+        </div>
+      </div>
+    </div>
+  </section>
 
-<div class="footer">
-  © 2026 Nibanez
-</div>
-
-</div>
-
+  <footer>
+    <div class="container">
+      <div class="footer-inner">
+        <div>© 2026 Nibanez</div>
+        <div>
+          <a href="#featured">Featured</a>
+          <span class="sep"> · </span>
+          <a href="#tools">Tools</a>
+          <span class="sep"> · </span>
+          <a href="#tech-art">Technical Art</a>
+          <span class="sep"> · </span>
+          <a href="/projects.html">Projects</a>
+        </div>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
