Revise content and add learning systems section
Updated the content to provide a clearer overview of skills and tools, added a new section for learning systems, and corrected the email address.

--- a/index.html
+++ b/index.html
@@ -197,8 +197,7 @@
           </div>
 
           <div class="statement">
-            I build <b>Unity/C# tooling</b> and <b>production pipelines</b> that reduce friction for artists and developers.
-            Focus: maintainable systems, fast iteration, clean handoffs.
+            I build Unity/C# tools, production pipelines, and interactive learning systems that help developers and artists work faster and understand complex workflows. My focus is on clarity, maintainability, and reducing friction between creative and technical domains.
           </div>
         </div>
       </div>
@@ -210,9 +209,7 @@
       <div class="section-title">Tools</div>
       <div class="panel">
         <ul>
-          <li>Unity editor tooling and workflow accelerators.</li>
-          <li>Automation scripts for asset/pipeline steps (DCC → engine handoff).</li>
-          <li>Clean architecture: readable, documented, maintainable.</li>
+          <li>Examples:</li>
         </ul>
       </div>
     </section>
@@ -221,9 +218,16 @@
       <div class="section-title">Tech Art</div>
       <div class="panel">
         <ul>
-          <li>Sculpt → retopo → rig/animate → engine integration mindset.</li>
-          <li>Pipeline-aware asset prep for real-time constraints.</li>
-          <li>Focus on practical deliverables, not “art dump.”</li>
+          <li>Examples:</li>
+        </ul>
+      </div>
+    </section>
+
+    <section id="learningsystems">
+      <div class="section-title">Learning Systems</div>
+      <div class="panel">
+        <ul>
+          <li>Examples:</li>
         </ul>
       </div>
     </section>
@@ -233,7 +237,7 @@
       <div class="panel">
         <!-- Replace these -->
         <p style="margin:0; color: var(--muted);">
-          Email: <a href="mailto:you@example.com" style="color:var(--text); border-bottom:1px solid rgba(124,246,255,0.25);">you@example.com</a><br/>
+          Email: <a href="mailto:nikolai.ibanez@gmail.com" style="color:var(--text); border-bottom:1px solid rgba(124,246,255,0.25);">you@example.com</a><br/>
           LinkedIn: <a href="https://www.linkedin.com/" target="_blank" rel="noreferrer" style="color:var(--text); border-bottom:1px solid rgba(124,246,255,0.25);">Profile</a><br/>
           GitHub: <a href="https://github.com/" target="_blank" rel="noreferrer" style="color:var(--text); border-bottom:1px solid rgba(124,246,255,0.25);">Profile</a>
         </p>
