Add link to Learning Systems in navigation

--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
           <a class="pill primary" href="#tools">Tools</a>
           <a class="pill" href="#techart">Tech Art</a>
           <a class="pill" href="/projects.html">Projects</a>
+          <a class="pill" href="#learningsystems">Learning Systems</a>
           <a class="pill" href="#contact">Contact</a>
         </div>
 
